# pogl

./: CMakeLists.txt  README
data/: example.part  spawn.glsl  update.glsl
data/fire/: data  spawn.glsl  update.glsl  vert
data/fire3d/: spawn.glsl  update.glsl  vert
data/smoke/: data  spawn.glsl  update.glsl  vert
data/snow/: spawn.glsl  update.glsl
data/snow3d/: data  spawn.glsl  update.glsl  vert
data/sun/: spawn.glsl  update.glsl
data/sun3d/: spawn.glsl  update.glsl  vert
src/: camera.cc  camera.hh  compute.glsl  data-pack.hh  engine.cc  engine.hh  fragment.glsl  main.cc  main_fabrizio.cc  particle.cc  particle.hh  vertex.glsl
src/gl/: gl.hh  program.cc  program.hh  shader.cc  shader.hh  ssbo.hh  ssbo.hxx  vao.cc  vao.hh  vbo.cc  vbo.hh  vbo.hxx
src/noise/: perlin.glsl  perlin3d.cc  perlin3d.hh
src/particles/: compute-particle.cc  compute-particle.hh  fire.cc  fire.hh  fire3d.cc  fire3d.hh  particle.cc  particle.hh  pulsar.cc  pulsar.hh  sun.cc  sun.hh  sun3d.cc  sun3d.hh
